FIX: bug with fixed topbanner on small height screens

--- a/src/components/mobileNavMenu/mobileNavMenu.scss
+++ b/src/components/mobileNavMenu/mobileNavMenu.scss
@@ -10,13 +10,11 @@
 		z-index: 11;
 	}
 
-	// display: flex;
-	// flex-direction: column;
 	background-color: #fff;
 	height: 100%; width: 320px;
 	margin-left: auto;
 	padding: 0 15px;
-
+	overflow-y: auto;
 	&__header {
 		border-bottom: 1px solid $c-gray;
 		height: $header-height-mobile;
