--- a/src/components/topbanner/topbanner.scss
+++ b/src/components/topbanner/topbanner.scss
@@ -1,5 +1,6 @@
 .topbanner {
-	min-height: 50vh;
+	height: 50vh;
+	min-height: 300px;
 	color: white;
 	position: relative;
 
@@ -31,6 +32,7 @@
 		position: fixed;
 		top: 0; left: 0;
 		width: 100%; height: 50vh;
+		min-height: 300px;
 		background: rgba($color: #000000, $alpha: 0.3);
 		z-index: 1;
 	}
